fix: standardize spacing and padding using rem units for consistency

--- a/html-css/Alura/Repositorio/styles/style.css
+++ b/html-css/Alura/Repositorio/styles/style.css
@@ -26,7 +26,7 @@ body{
 }
 .cabecalho__menu{
     display: flex;
-    gap: 80px;
+    gap: 5rem;
 }
 .cabecalho__menu__link{
     color: var(--cor-terciaria);
@@ -49,7 +49,7 @@ body{
     width: 615px;
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 1.2rem;
 }
 .apresentacao__conteudo__titulo{
     font-size: 2rem;
@@ -62,12 +62,12 @@ body{
     font-size: 1.2rem;
     font-family: var(--fonte-secundaria);
     text-align: justify;
-    text-indent: 2em;
+    text-indent: 2rem;
 }
 .apresentacao__links{
     display: flex;
     flex-direction: column;
-    gap: 30px;
+    gap: 1.8rem;
     align-items: center;
 }
 .apresentacao__links__subtitulo{
@@ -78,11 +78,11 @@ body{
 .apresentacao__links__link{
     display: flex;
     justify-content: center;
-    gap: 16px;
+    gap: 1rem;
     border: 2px solid var(--cor-terciaria);
     color: var(--cor-secundaria);
     width: 378px;
-    padding: 16px 0px;
+    padding: 1rem 0rem;
     text-align: center;
     border-radius: 8px;
     font-size: 1.4rem;
